<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of pets -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/name"
        style="@style/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="This is the book Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item_quantity" />

        <TextView
            android:id="@+id/quantity_text_view"
            style="@style/information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="30" />

        <TextView
            style="@style/information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/list_item_price" />

        <TextView
            android:id="@+id/price_text_view"
            style="@style/information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="18€" />

        <Button
            android:id="@+id/sell_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:focusable="false"
            android:text="@string/list_item_sell_button" />


    </LinearLayout>


</LinearLayout>